--- a/index.html
+++ b/index.html
@@ -33,31 +33,59 @@
     <main>
       <!-- Stay -->
       <section id="stay">
-        <h2>Find the perfect vacation rental</h2>
-        <!-- Create a form here -->
+        <h2>Find the perfect vacation rental! </h2>
+        <form>
+          <div>
+            <label for="location">Location:</label>
+            <input type="text" id="name" placeholder="City, State" >
+          </div>
+          <div>
+            <label for="start-date">Check In:</label>
+            <input type="date" id="start-date">
+          </div>
+          <div>
+            <label for="end-date">Check Out:</label>
+            <input type="date" id="end-date">
+          </div>
+         
+          <div>
+            <label for="Home Type">Home Type:</label>
+            <select id="type">
+              <option>Any</option>
+              <option>Cabin</option>
+              <option>Beachfront</option>
+              <option>Tiny Home</option>
+              <option>Mansion</option>
+              <option>Countryside</option>
+            </select>
+          </div>
+          <button type="submit">Search</button>
+        </form>
       </section>
 
       <!-- About -->
       <section id="about" class="alternate-background">
         <h2>About</h2>
 
+        <p>
+          At ThinfulBnB, we believe that travel should be an enriching 
+          and hassle-free experience. Our mission is to provide a platform 
+          that connects travelers with a world of unique and affordable accommodations, 
+          all while maintaining the highest standards of comfort, convenience, and 
+          authenticity.
+        </p>
+
         <img
-          src="images/vacation-rental-pool.png"
+          src="images/vacation-rental-pool.jpg"
           alt="Thinkfulbnb - Vacation rental pool"
         />
 
         <img
-          src="images/vacation-rental-inside-stone.png"
+          src="images/cabin-interior.jpg"
           alt="Thinkfulbnb - Vacation rental inside stone"
         />
 
-        <p>
-          Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
-          fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
-          porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
-          neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
-          gravida neque.
-        </p>
+    
       </section>
 
       <!-- Ideas -->
@@ -65,41 +93,37 @@
         <h2>Ideas</h2>
         <h3>Forest retreats</h3>
         <img
-          src="images/forest-retreat.png"
+          src="images/forest-retreat.jpg"
           alt="Thinkfulbnb - Forest retreat"
         />
         <h3>Beaches</h3>
-        <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+        <img src="images/beach-house.jpg" alt="Thinkfulbnb - Beach house" />
 
         <h3>Rustic cabins</h3>
-        <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+        <img src="images/cabin.jpg" alt="Thinkfulbnb - Cabin" />
 
         <h3>Pet-friendly</h3>
-        <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+        <img src="images/pet-friendly.jpg" alt="Thinkfulbnb - Pet-friendly" />
       </section>
 
       <!-- Host -->
       <section id="host" class="alternate-background">
         <h2>Want to Become a Thinkfulbnb Host?</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-          molestie in est id efficitur. Sed hendrerit ut turpis quis dapibus.
-          Nam sit amet iaculis lectus. Aliquam erat volutpat. Praesent rhoncus
-          pellentesque eros in aliquet. Sed accumsan elit lacus, id ultrices
-          libero rutrum vitae.
+          Becoming a ThinkfulBnB host lets you open your space 
+          to travelers, connect with people from around the world, 
+          and earn income while providing a memorable and authentic stay.
+           It's a flexible and rewarding experience.
         </p>
         <ul>
-          <li>Mauris in pellentesque ligula.</li>
-          <li>Sed accumsan elit lacus, id ultrices libero rutrum vitae.</li>
-          <li>Nunc vitae ex eget neque pellentesque porttitor.</li>
-          <li>Cras mollis lorem sagittis sapien imperdiet blandit. Vivamus.</li>
-          <li>
-            Donec vehicula ipsum nisi, eu consectetur leo feugiat et. Fusce eget
-            hendrerit mauris.
-          </li>
+          <li>Open your home to travelers.</li>
+          <li>Generate extra revenue as a host.</li>
+          <li>Choose when you want to host.</li>
+          <li>Access resources for successful hosting.</li>
+          <li>Create a unique stay for your guests.</li>
         </ul>
 
-        <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
+        <img src="images/become-a-host.jpg" alt="Thinkfulbnb - Become a host" />
       </section>
     </main>
 
