--- a/index.html
+++ b/index.html
@@ -65,28 +65,25 @@
 
       <!-- About -->
       <section id="about" class="alternate-background">
+        <div>
         <h2>About</h2>
-
-        <p>
-          At ThinfulBnB, we believe that travel should be an enriching 
+        <p> At ThinfulBnB, we believe that travel should be an enriching 
           and hassle-free experience. Our mission is to provide a platform 
           that connects travelers with a world of unique and affordable accommodations, 
           all while maintaining the highest standards of comfort, convenience, and 
-          authenticity.
-        </p>
-
-        <img
+          authenticity.</p>
+        </div>
+        <img 
           src="images/vacation-rental-pool.jpg"
           alt="Thinkfulbnb - Vacation rental pool"
-        />
-
-        <img
+          >
+          
+          <img
           src="images/cabin-interior.jpg"
           alt="Thinkfulbnb - Vacation rental inside stone"
-        />
-
-    
+          >
       </section>
+  
 
       <!-- Ideas -->
       <section id="ideas">
@@ -107,28 +104,30 @@
       </section>
 
       <!-- Host -->
-      <section id="host" class="alternate-background">
-        <h2>Want to Become a Thinkfulbnb Host?</h2>
-        <p>
-          Becoming a ThinkfulBnB host lets you open your space 
-          to travelers, connect with people from around the world, 
-          and earn income while providing a memorable and authentic stay.
-           It's a flexible and rewarding experience.
-        </p>
-        <ul>
-          <li>Open your home to travelers.</li>
-          <li>Generate extra revenue as a host.</li>
-          <li>Choose when you want to host.</li>
-          <li>Access resources for successful hosting.</li>
-          <li>Create a unique stay for your guests.</li>
-        </ul>
-
-        <img src="images/become-a-host.jpg" alt="Thinkfulbnb - Become a host" />
+      <section id="host" class="primary-bg">
+        <div>
+          <h2>Want to be a Thinkfulbnb host?</h2>
+          <p>
+            Becoming a Thinkfulbnb host lets you open your 
+            space to travelers, connect with people from around 
+            the world, and earn income while providing a memorable 
+            and authentic stay. It's a flexible and rewarding experience.
+          </p>
+          <p>Perks of being a Thinfulbnb host</p>
+          <ul>
+            <li>Open your home to travelers.</li>
+            <li>Generate extra revenue as a host.</li>
+            <li>Choose when you want to host.</li>
+            <li>Meet people from diverse backgrounds.</li>
+            <li> Create a unique stay for your guests.</li>
+          </ul>
+        </div>
+        <img src = "images/become-a-host.jpg" alt="Thinkfulbnb - become-a-host"
       </section>
     </main>
-
     <footer>
       <p>© Thinkful</p>
     </footer>
   </body>
 </html>
+
