--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div class="logo">Thinkfulbnb</div>
       <nav>
         <ul id="menu">
-          <li><a>Stay</a></li>
-          <li><a>About</a></li>
-          <li><a>Ideas</a></li>
-          <li><a>Host</a></li>
+          <li><a href = "#stay">Stay</a></li>
+          <li><a href = "#about">About</a></li>
+          <li><a href = "#ideas">Ideas</a></li>
+          <li><a href = "#host">Host</a></li>
         </ul>
       </nav>
     </header>
@@ -36,27 +36,27 @@
         <h2>Find the perfect vacation rental! </h2>
         <form>
           <div>
-            <label for="location">Location:</label>
-            <input type="text" id="name" placeholder="City, State" >
+            <label for="location">Location</label>
+            <input type="text" id="location" placeholder="Search destination">
           </div>
           <div>
-            <label for="start-date">Check In:</label>
-            <input type="date" id="start-date">
+            <label for="arrive">Arrive</label>
+            <input type="date" id="arrive">
           </div>
           <div>
-            <label for="end-date">Check Out:</label>
-            <input type="date" id="end-date">
+            <label for="depart">Depart</label>
+            <input type="date" id="depart">
           </div>
-         
           <div>
-            <label for="Home Type">Home Type:</label>
+            <label for="type">Type</label>
             <select id="type">
-              <option>Any</option>
-              <option>Cabin</option>
-              <option>Beachfront</option>
-              <option>Tiny Home</option>
-              <option>Mansion</option>
-              <option>Countryside</option>
+              <option>Apartment</option>
+              <option>Barn</option>
+              <option>Castle</option>
+              <option>HouseBoat</option>
+              <option>Tiny House</option>
+              <option>Yacht</option>
+              <option>Yurt</option>
             </select>
           </div>
           <button type="submit">Search</button>
@@ -65,14 +65,8 @@
 
       <!-- About -->
       <section id="about" class="alternate-background">
-        <div>
         <h2>About</h2>
-        <p> At ThinfulBnB, we believe that travel should be an enriching 
-          and hassle-free experience. Our mission is to provide a platform 
-          that connects travelers with a world of unique and affordable accommodations, 
-          all while maintaining the highest standards of comfort, convenience, and 
-          authenticity.</p>
-        </div>
+        <div>
         <img 
           src="images/vacation-rental-pool.jpg"
           alt="Thinkfulbnb - Vacation rental pool"
@@ -82,26 +76,44 @@
           src="images/cabin-interior.jpg"
           alt="Thinkfulbnb - Vacation rental inside stone"
           >
+        <p> At Thinfulbnb, we believe that travel should be an enriching 
+          and hassle-free experience. Our mission is to provide a platform 
+          that connects travelers with a world of unique and affordable accommodations, 
+          all while maintaining the highest standards of comfort, convenience, and 
+          authenticity.</p>
+        </div>
       </section>
   
 
       <!-- Ideas -->
       <section id="ideas">
         <h2>Ideas</h2>
-        <h3>Forest retreats</h3>
-        <img
-          src="images/forest-retreat.jpg"
-          alt="Thinkfulbnb - Forest retreat"
-        />
-        <h3>Beaches</h3>
-        <img src="images/beach-house.jpg" alt="Thinkfulbnb - Beach house" />
-
-        <h3>Rustic cabins</h3>
-        <img src="images/cabin.jpg" alt="Thinkfulbnb - Cabin" />
-
-        <h3>Pet-friendly</h3>
-        <img src="images/pet-friendly.jpg" alt="Thinkfulbnb - Pet-friendly" />
-      </section>
+        <div class="row">
+          <div>
+            <h3>Forest Retreat</h3>
+            <img
+            src="images/forest-retreat.jpg"
+            alt="Thinkfulbnb - Forest retreat"
+          />
+          </div>
+          <div>
+            <h3>Beaches</h3>
+          <img src="images/beach-house.jpg" alt="Thinkfulbnb - Beach house" />
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <h3>Rustic cabins</h3>
+          <img src="images/cabin.jpg" alt="Thinkfulbnb - Cabin" />
+          </div>
+          <div>
+            <h3>Pet-friendly</h3>
+          <img src="images/pet-friendly.jpg" alt="Thinkfulbnb - Pet-friendly" />
+  
+          </div>
+        </div>
+        
+        </section>
 
       <!-- Host -->
       <section id="host" class="primary-bg">
@@ -122,12 +134,12 @@
             <li> Create a unique stay for your guests.</li>
           </ul>
         </div>
-        <img src = "images/become-a-host.jpg" alt="Thinkfulbnb - become-a-host"
-      </section>
+        <div><img src = "images/become-a-host.png" alt="Thinkfulbnb - become-a-host"
+        </div>
+        </section>
     </main>
     <footer>
       <p>© Thinkful</p>
     </footer>
   </body>
 </html>
-
